# utopia-cpp

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.hpp  vcpkg.json
cmake/: checker.cmake  config.cmake  config_header.cmake  define.cmake  import-library.cmake  init-library.cmake  install.cmake  library.cmake  options.cmake  pack.cmake
cmake/options/: colorful.cmake  nominmax.cmake  platform.cmake  rt_check.cmake  sanitize.cmake
src/: CMakeLists.txt  config.hpp
src/main/: CMakeLists.txt
src/main/client/: CMakeLists.txt  main.cpp
src/main/client/render/sdl/: surface.cpp
src/main/client/render/text/: engine.cpp  face.cpp  renderer.cpp
src/main/core/: CMakeLists.txt  assert.cpp  debug.cpp  exception.cpp
src/main/include/utopia/client/render/: bitmap.hpp  defines.hpp  render.hpp  sdl_context.hpp
src/main/include/utopia/client/render/sdl/: error.hpp  renderer.hpp  sdl.hpp  surface.hpp  texture.hpp  window.hpp
src/main/include/utopia/client/render/text/: engine.hpp  error.hpp  face.hpp  font.hpp  library.hpp  renderer.hpp  shaper.hpp  source.hpp  text.hpp
src/main/include/utopia/client/render/ui/: context.hpp  drawable.hpp  group.hpp  label.hpp  ui.hpp
src/main/include/utopia/client/text/: source.hpp
src/main/include/utopia/core/: assert.hpp  buffer.hpp  check_ops.hpp  concepts.hpp  convert.hpp  debug.hpp  exception.hpp  guard.hpp  pointer.hpp  source_location.hpp  temp_util.hpp
src/main/include/utopia/core/i18n/: icu.hpp
src/main/lib/core/: assert.cpp  exception.cpp
src/main/server/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/core/: check_ops_test.cpp  convert_test.cpp
src/test/core/i18n/: icu.cpp
